fix: Revised difficulty & hashrate calculation formula

--- a/config.json
+++ b/config.json
@@ -4,5 +4,9 @@
   "database": {
     "path": "./3dp_blocks.db",
     "batchSize": 50
+  },
+  "difficultyChanges": {
+    "firstChange": 370899,
+    "secondChange": 740500
   }
 }
