--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
   "rpcUrl": "wss://rpc.3dpass.org",
   "startHeight": 1,
+  "webPort": 6000,
   "database": {
     "path": "./3dp_blocks.db",
     "batchSize": 150
