--- a/config-example.json
+++ b/config-example.json
@@ -4,7 +4,7 @@
   "webPort": 6000,
   "database": {
     "path": "./3dp_blocks.db",
-    "batchSize": 150
+    "batchSize": 200
   },
   "difficultyChanges": {
     "firstChange": 370899,
@@ -15,6 +15,12 @@
     "retryDelay": 10000,
     "healthCheckInterval": 30000,
     "connectionTimeout": 5000
+  },
+  "performance": {
+    "blockFetchConcurrency": 30,
+    "kycProcessConcurrency": 20,
+    "maxMemoryMB": 3500,
+    "delayBetweenBatches": 500
   },
   "_comments": {
     "rpcUrl": "3DPass节点RPC地址，备用节点: wss://rpc2.3dpass.org",
@@ -28,6 +34,10 @@
     "reconnection.maxRetries": "最大重试次数",
     "reconnection.retryDelay": "重试延迟",
     "reconnection.healthCheckInterval": "健康检查间隔",
-    "reconnection.connectionTimeout": "连接超时"
+    "reconnection.connectionTimeout": "连接超时",
+    "performance.blockFetchConcurrency": "区块获取并发度",
+    "performance.kycProcessConcurrency": "KYC处理并发度",
+    "performance.maxMemoryMB": "最大内存使用",
+    "performance.delayBetweenBatches": "批次间延迟"
   }
 }
